[package]
name = "ethereum-tx-sign"
version = "1.0.0"
description = "Allows you to model a raw ethereum transaction and sign it with your private key"
repository = "https://github.com/synlestidae/ethereum-tx-sign"
license = "MIT"
keywords = ["web3", "ethereum", "transaction", "sign"]
authors = ["Mate Antunovic <mateATantunovic.nz>"]
readme = "README.md"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tiny-keccak="1.4.2"
secp256k1 = "0.11.1"
rlp = "0.2.2"

[dependencies.web3]
git = "https://github.com/gakonst/rust-web3"
rev = "ebb3897d7f4ab3a71dbaf168fe4ac2846904d376"
